# aegis-query-language

./: .dockerignore  .env.example  .gitignore  .importlinter  AEGIS-QUERY-LANGUAGE.txt  ARCHITECTURE_CLAUDE.md  CLAUDE.md  Dockerfile  IMPROVEMENTS_CLAUDE.md  README.md  docker-compose.bird.yml  docker-compose.yml  pyproject.toml  test.txt  test_compile.py  testlog.txt
app/: main.py  reload.py  vault.py
app/api/: auth.py  compiler.py  dependencies.py  meta_models.py  models.py  router.py
app/audit/: __init__.py  append.py  chaining.py  interfaces.py  logger.py  models.py
app/compiler/: __init__.py  anthropic_gateway.py  backend_hints.py  base_gateway.py  cli_gateway.py  engine.py  exceptions.py  filter.py  gateway.py  google_gateway.py  hints.py  interfaces.py  llm_factory.py  models.py  ollama.py  openai_gateway.py  parser.py  prompting.py  provider_config.py  safety.py  session_store.py  translator.py  xai_gateway.py
app/execution/: __init__.py  executor.py  interfaces.py  models.py
backend_migrations/: env.py
docs/: ANALYSIS_CLAUDE.md  ARCHITECTURE_FROZEN.md  ARCHITECTURE_SUMMARY.md  Authentication Implementation Plan.md  BIRD_BENCHMARK.md  BIRD_SETUP.md  Database Selection Implementation Plan.md  Dockerization Implementation Plan.md  Metadata_Schema_Implementation_Plan.md  Metadata_Schema_Plan_Feedback.md  SAFETY_ENGINE.md  Tenant-Scoped Registry Implementation Plan.md  Test_IMP-013.md  schema_hints_fix_implementation_plan.md
scripts/: apply_grants.py  benchmark_report.py  create_admin_key.py  debug_versions.py  discover_metadata.py  download_financial.py  init_roles.sql  phase1_scan.py  populate_descriptions.py  populate_source_databases.py  run_bird_benchmark.py  scan_bird_sql.py  seed_postgres.py  validate_bird.py
static/: app.js  index.html  steward.html  style.css
tests/: conftest.py  test_api.py  test_api_models.py  test_audit.py  test_audit_append.py  test_audit_chain.py  test_audit_chaining.py  test_auth.py  test_backend_hints.py  test_chat_history.py  test_compiler_engine.py  test_domain_models.py  test_executor.py  test_explainability.py  test_filter.py  test_gateways.py  test_golden_integration.py  test_llm_factory.py  test_llm_response_validator.py  test_loader.py  test_main.py  test_main_lifespan.py  test_metadata_clone.py  test_ollama.py  test_parser_safety.py  test_prompt_builder.py  test_prompting_gateway.py  test_provider_config.py  test_rag.py  test_rag_builder.py  test_reload.py  test_session_store.py  test_translator.py  test_translator_repairs.py  test_vault.py  test_version_lifecycle.py  test_worm_security.py
(+38 files in other folders)
